fix sidenav active overlap with default vertical line

--- a/style.css
+++ b/style.css
@@ -129,6 +129,7 @@ nav>ul {
   padding-left: 20px;
   height: 100%;
   display: block;
+  margin-left: -1px;
 }
 
 .sidenav a.active {
